# agent-book

./: .env.sample  .gitignore  README.md  pyproject.toml
chapter/001/: run.ipynb
chapter/004/: README.md  run.ipynb
chapter/005/: README.md  run.ipynb
chapter/006/: README.md  run.ipynb
chapter/009/: README.md  run.ipynb
chapter/010/: README.md  main.py  run.ipynb
chapter/012/: README.md
chapter/012/01_passive_goal_creator/: main.py  run.ipynb
chapter/012/02_prompt_optimizer/: settings.py
src/: README.md  settings.py
src/multi_path_plan_generation/: main.py
src/passive_goal_creator/: main.py
src/prompt_optimizer/: main.py
src/response_optimizer/: main.py
src/single_path_plan_generation/: main.py
